k8s/cloud/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: &quot;kafka&quot;
  labels:
    name: &quot;kafka&quot;
