k8s/cloud/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: us-central1-docker.pkg.dev/proven-solstice-371106/cardinalis/gateway
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 150
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10
          # Configure the readiness probe
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 150
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway

spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: gateway
  type: LoadBalancer
