k8s/cloud/tweet-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweet-service
  labels:
    app: tweet-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tweet-service
  template:
    metadata:
      labels:
        app: tweet-service
    spec:
      containers:
        - name: tweet-service
          image: us-central1-docker.pkg.dev/proven-solstice-371106/cardinalis/tweet-service
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: tweet-service
  labels:
    app: tweet-service
    spring-boot: "true"
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: tweet-service
  type: ClusterIP
